--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1014,10 +1014,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1    False\n",
+       "2    False\n",
+       "3     True\n",
+       "4    False\n",
+       "5     True\n",
+       "6     True\n",
+       "7     True\n",
+       "8     True\n",
+       "Name: names, dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.DataFrame({'names':names})['names'].str.contains(\"to|ja|ha\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1050,7 +1073,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
