--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1044,17 +1044,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"shaurya\".count('a')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('soup', 'salad'),\n",
+       " ('soup', 'sandwich'),\n",
+       " ('soup', 'pasta'),\n",
+       " ('salad', 'sandwich'),\n",
+       " ('salad', 'pasta'),\n",
+       " ('sandwich', 'pasta')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dishes = ['soup','salad','sandwich','pasta']\n",
+    "combo = []\n",
+    "\n",
+    "for i in range(len(dishes)):\n",
+    "    for j in range(i+1,len(dishes)):\n",
+    "        combo.append((dishes[i],dishes[j]))\n",
+    "combo"
+   ]
   },
   {
    "cell_type": "code",
@@ -1073,7 +1110,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1087,7 +1124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
