--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1095,10 +1095,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 8, 27, 64, 125, 216, 343]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_1 = [1,2,3,4,5,6,7]\n",
+    "[x**3 for x in list_1]\n",
+    "# or\n",
+    "list(map(lambda x:x**3,list_1))"
+   ]
   },
   {
    "cell_type": "code",
