--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1118,6 +1118,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'class_2': 'RaNdOm', 'class_3': 'VaShIsTh', 'class_1': 'ShAuRyA'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_1 = {\"class_2\":\"random\",\"class_3\":\"vashisth\",\"class_1\":\"shaurya\"}\n",
+    "new_dict = {}\n",
+    "keys = list(list_1.keys())\n",
+    "\n",
+    "for k, i in enumerate(list_1.values()):\n",
+    "    new_dict[keys[k]] = \"\".join(value.upper() if num % 2 == 0 else value.lower() for num, value in enumerate(i))\n",
+    "new_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1126,7 +1173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1140,7 +1187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
