--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1095,10 +1095,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Given a square matrix mat of size n x n. \n",
+    "# The task is to rotate it by 90 degrees in an anti-clockwise direction without using any extra space.\n",
+    "mat = [[1, 2, 3],\n",
+    "       [4, 5, 6],\n",
+    "       [7, 8, 9]]\n",
+    "# Output: Rotated Matrix\n",
+    "# [[3, 6, 9],\n",
+    "# [2, 5, 8],\n",
+    "# [1, 4, 7]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[7, 4, 1], [8, 5, 2], [9, 6, 3]]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rotate_90_anticlockwise(mat):\n",
+    "    n = len(mat)\n",
+    "    for i in range(n):\n",
+    "        for j in range(i + 1, n):\n",
+    "            mat[i][j], mat[j][i] = mat[j][i], mat[i][j]\n",
+    "    for i in range(n):\n",
+    "        mat[i].reverse()\n",
+    "mat = [[1, 2, 3],\n",
+    "       [4, 5, 6],\n",
+    "       [7, 8, 9]]\n",
+    "rotate_90_anticlockwise(mat)\n",
+    "mat"
+   ]
   },
   {
    "cell_type": "code",
