--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1095,76 +1095,20 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 1,
-=======
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 8, 27, 64, 125, 216, 343]"
+       "[[7, 4, 1], [8, 5, 2], [9, 6, 3]]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "list_1 = [1,2,3,4,5,6,7]\n",
-    "[x**3 for x in list_1]\n",
-    "# or\n",
-    "list(map(lambda x:x**3,list_1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'class_2': 'RaNdOm', 'class_3': 'VaShIsTh', 'class_1': 'ShAuRyA'}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list_1 = {\"class_2\":\"random\",\"class_3\":\"vashisth\",\"class_1\":\"shaurya\"}\n",
-    "new_dict = {}\n",
-    "keys = list(list_1.keys())\n",
-    "\n",
-    "for k, i in enumerate(list_1.values()):\n",
-    "    new_dict[keys[k]] = \"\".join(value.upper() if num % 2 == 0 else value.lower() for num, value in enumerate(i))\n",
-    "new_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
->>>>>>> a91a01998fce2b9b915233bc5b595e34554d942a
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Given a square matrix mat of size n x n. \n",
     "# The task is to rotate it by 90 degrees in an anti-clockwise direction without using any extra space.\n",
@@ -1174,26 +1118,9 @@
     "# Output: Rotated Matrix\n",
     "# [[3, 6, 9],\n",
     "# [2, 5, 8],\n",
-    "# [1, 4, 7]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[7, 4, 1], [8, 5, 2], [9, 6, 3]]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "# [1, 4, 7]]\n",
+    "\n",
+    "\n",
     "def rotate_90_anticlockwise(mat):\n",
     "    n = len(mat)\n",
     "    for i in range(n):\n",
@@ -1214,11 +1141,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1232,7 +1166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
