--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1137,10 +1137,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'class_2': 'RaNdOm', 'class_3': 'VaShIsTh', 'class_1': 'ShAuRyA'}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_1 = {\"class_2\":\"random\",\"class_3\":\"vashisth\",\"class_1\":\"shaurya\"}\n",
+    "new_dict = {}\n",
+    "keys = list(list_1.keys())\n",
+    "for k, i in enumerate(list_1.values()):\n",
+    "    new_dict[keys[k]] = \"\".join(value.upper() if num % 2 == 0 else value.lower() for num, value in enumerate(i))\n",
+    "new_dict"
+   ]
   },
   {
    "cell_type": "code",
