--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1119,20 +1119,10 @@
     "# [[3, 6, 9],\n",
     "# [2, 5, 8],\n",
     "# [1, 4, 7]]\n",
-    "\n",
-    "\n",
-    "def rotate_90_anticlockwise(mat):\n",
-    "    n = len(mat)\n",
-    "    for i in range(n):\n",
-    "        for j in range(i + 1, n):\n",
-    "            mat[i][j], mat[j][i] = mat[j][i], mat[i][j]\n",
-    "    for i in range(n):\n",
-    "        mat[i].reverse()\n",
-    "mat = [[1, 2, 3],\n",
-    "       [4, 5, 6],\n",
-    "       [7, 8, 9]]\n",
-    "rotate_90_anticlockwise(mat)\n",
-    "mat"
+    "new_dict = []\n",
+    "for i in mat:\n",
+    "    new_dict.append(i[::-1])\n",
+    "[list(row) for row in zip(*new_dict)]"
    ]
   },
   {
@@ -1159,6 +1149,13 @@
     "    new_dict[keys[k]] = \"\".join(value.upper() if num % 2 == 0 else value.lower() for num, value in enumerate(i))\n",
     "new_dict"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
