--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -995,6 +995,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count from a list\n",
+    "list_1 = [\"a\",\"a\",\"a\",\"c\",\"v\",\"b\",\"n\",\"a\",\"q\",\"w\",\"e\",\"a\",\"r\",\"t\",\"a\"]\n",
+    "list_1.count(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['r', 'w', 'b', 'e', 'n', 'a', 'v', 'c', 't', 'q']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove duplicates from list\n",
+    "list(set(list_1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print duplicates\n",
+    "for i in list(set(list_1)):\n",
+    "    if list_1.count(i)>1:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
