--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1004,29 +1004,29 @@
        "6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# count from a list\n",
-    "list_1 = [\"a\",\"a\",\"a\",\"c\",\"v\",\"b\",\"n\",\"a\",\"q\",\"w\",\"e\",\"a\",\"r\",\"t\",\"a\"]\n",
+    "list_1 = [\"a\",\"a\",\"a\",\"c\",\"v\",\"b\",\"n\",\"a\",\"q\",\"w\",\"e\",\"a\",\"r\",\"t\",\"a\",\"V\",\"v\",\"c\"]\n",
     "list_1.count(\"a\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['r', 'w', 'b', 'e', 'n', 'a', 'v', 'c', 't', 'q']"
+       "['r', 'w', 'b', 'e', 'n', 'a', 'v', 'c', 'V', 't', 'q']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,14 +1038,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\n"
+      "a\n",
+      "v\n",
+      "c\n"
      ]
     }
    ],
