--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1422,6 +1422,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['black is a color.',\n",
+       " 'The color black is often associated with elegance.',\n",
+       " 'The black dog ran fast.']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentences = [\n",
+    "   \"black is a color.\",\n",
+    "   \"The color black is often associated with elegance.\",\n",
+    "   \"The cat is named blackcat.\",\n",
+    "   \"blackjack is a popular card game.\",\n",
+    "    \"The black dog ran fast.\"]\n",
+    "# using list comprehension, you have to find out which sentences consist of the word \"black\"\n",
+    "[i for i in sentences if \"black \" in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Given two sorted arrays nums1 and nums2 of size m and n respectively, \n",
+    "# return the median of the two sorted arrays. [without using list built-in methods]\n",
+    "nums1 = [2,46,3,15,6]\n",
+    "nums2 = [1,2,3,45]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Implement a function to check if two strings are anagrams of each other.\n",
+    "def anagram(srt_1,srt_2):\n",
+    "    if len(srt_1)==len(srt_2) and [i for i in srt_1 if i in srt_2]:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "anagram(\"was\",\"saw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You are given a sales table with columns: order_id, customer_id, order_date, order_amount. Write a SQL query to find the top 5 customers with the highest total sales in the last 12 months.\n",
+    "# select customer_id \n",
+    "# from table \n",
+    "# where order_date < date_sub(now(), interval 1 year)\n",
+    "# order by order_amount desc\n",
+    "# limit 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
