--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1451,14 +1451,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Given two sorted arrays nums1 and nums2 of size m and n respectively, \n",
     "# return the median of the two sorted arrays. [without using list built-in methods]\n",
     "nums1 = [2,46,3,15,6]\n",
-    "nums2 = [1,2,3,45]\n"
+    "nums2 = [1,2,3,45]\n",
+    "def find_median(arr):\n",
+    "    arr.sort()\n",
+    "    mid = len(arr)//2\n",
+    "    if len(arr)%2==1:\n",
+    "        return arr[mid]\n",
+    "    else:\n",
+    "        return (arr[mid-1]+arr[mid])/2\n",
+    "find_median(nums2)"
    ]
   },
   {
