--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1745,6 +1745,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# factorial of 5\n",
+    "blank = 1\n",
+    "num = 5\n",
+    "for i in [*range(1,num+1)]:\n",
+    "    blank=blank*i\n",
+    "blank"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
