--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1754,7 @@
        "120"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1764,7 +1764,7 @@
     "blank = 1\n",
     "num = 5\n",
     "for i in [*range(1,num+1)]:\n",
-    "    blank=blank*i\n",
+    "    blank *= i\n",
     "blank"
    ]
   },
