--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1770,6 +1770,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'class_1'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Abstraction with Inheritance\n",
+    "class class_1():\n",
+    "    def __init__(self):\n",
+    "        self.call_name = \"class_1\"\n",
+    "\n",
+    "class class_2(class_1):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.call_name_2 = \"class_2\"\n",
+    "call = class_2()\n",
+    "call.call_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'h': 1, 'e': 1, 'l': 3, 'o': 2, ' ': 1, 'w': 1, 'r': 1, 'd': 1}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_string = \"hello world\"\n",
+    "# {'h': 1, 'e': 1, 'l': 3, 'o': 2, ' ': 1, 'w': 1, 'r': 1, 'd': 1}\n",
+    "\n",
+    "def count_str(str_1):\n",
+    "    blank={}\n",
+    "    for i in str_1:\n",
+    "        blank[i] = str_1.count(i)\n",
+    "    \n",
+    "    return blank\n",
+    "\n",
+    "count_str(input_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
