--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1832,6 +1832,37 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Something before the function runs.\n",
+      "Hello!\n",
+      "Something after the function runs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use of decorator\n",
+    "def my_decorator(func):\n",
+    "    def wrapper():\n",
+    "        print(\"Something before the function runs.\")\n",
+    "        func()\n",
+    "        print(\"Something after the function runs.\")\n",
+    "    return wrapper\n",
+    "\n",
+    "@my_decorator\n",
+    "def say_hello():\n",
+    "    print(\"Hello!\")\n",
+    "\n",
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
