--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1491,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1499,7 @@
    "source": [
     "# Implement a function to check if two strings are anagrams of each other.\n",
     "def anagram(srt_1,srt_2):\n",
-    "    if len(srt_1)==len(srt_2) and [i for i in srt_1 if i in srt_2]:\n",
+    "    if len(srt_1)==len(srt_2) and len([i for i in srt_1 if i in srt_2])==len(srt_2):\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
@@ -1857,6 +1857,35 @@
     "    print(\"Hello!\")\n",
     "\n",
     "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'u'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str_1 = \"shaurya vashisth\"\n",
+    "\n",
+    "def get_unique_str(str_1):\n",
+    "    import pandas as pd\n",
+    "    blank = {}\n",
+    "    for i in str_1:\n",
+    "        blank[i] = str_1.count(i)\n",
+    "    temp_df = pd.DataFrame({'Keys':blank.keys(),'Values':blank.values()})\n",
+    "    return str(temp_df[temp_df['Values']<2].head(1)['Keys'].iloc[0])\n",
+    "get_unique_str(str_1)\n"
    ]
   },
   {
