--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1890,6 +1890,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Range:- 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 = [1,2,5,4,8,56,3,2]\n",
+    "min_val = list_1[0]\n",
+    "max_val = list_1[0]\n",
+    "for i in list_1:\n",
+    "    if i < min_val:\n",
+    "        min_val = i\n",
+    "    if i > max_val:\n",
+    "        max_val = i\n",
+    "print(f\"Range:- {max_val-min_val}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
