--- a/Basic Practice.ipynb
+++ b/Basic Practice.ipynb
@@ -1770,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1779,13 +1779,13 @@
        "'class_1'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Abstraction with Inheritance\n",
+    "### Abstraction with Inheritance\n",
     "class class_1():\n",
     "    def __init__(self):\n",
     "        self.call_name = \"class_1\"\n",
@@ -1800,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1809,12 +1809,13 @@
        "{'h': 1, 'e': 1, 'l': 3, 'o': 2, ' ': 1, 'w': 1, 'r': 1, 'd': 1}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "### Count each word in a string\n",
     "input_string = \"hello world\"\n",
     "# {'h': 1, 'e': 1, 'l': 3, 'o': 2, ' ': 1, 'w': 1, 'r': 1, 'd': 1}\n",
     "\n",
@@ -1861,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1870,12 +1871,13 @@
        "'u'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "### Find 1st non reapeting word\n",
     "str_1 = \"shaurya vashisth\"\n",
     "\n",
     "def get_unique_str(str_1):\n",
@@ -1902,6 +1904,7 @@
     }
    ],
    "source": [
+    "### Find Range\n",
     "list_1 = [1,2,5,4,8,56,3,2]\n",
     "min_val = list_1[0]\n",
     "max_val = list_1[0]\n",
@@ -1911,6 +1914,41 @@
     "    if i > max_val:\n",
     "        max_val = i\n",
     "print(f\"Range:- {max_val-min_val}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 4, 5, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Arrange List\n",
+    "list_1 = [5,1,4,3,4,8,7,5,9,10]\n",
+    "def arange_arr(list_1):\n",
+    "    blank = []\n",
+    "    temp_list = list_1\n",
+    "    while temp_list:\n",
+    "            min_val = temp_list[0]\n",
+    "            for i in temp_list:\n",
+    "                if i < min_val:\n",
+    "                    min_val = i\n",
+    "            if min_val not in blank:\n",
+    "                blank.append(min_val)\n",
+    "                temp_list = [x for x in temp_list if x != min_val]\n",
+    "\n",
+    "    return blank\n",
+    "arange_arr(list_1)"
    ]
   },
   {
